# python-cinco

./: .gitignore  README.md  app-server.py  app_server.py  croner-dos.py  croner.py  croner_uno.py  estado.py  estado_compartido.py  gestor_email.py  gestor_finviz.py  gestor_job.py  latest-insiders-trading.py  latest_insiders_trading.py  main.py  pyproject.toml
.github/workflows/: python-app.yml
auxiliar/: latest-insiders-transaction-rows.html
salidas/: latest-insiders-trading-Buy.xlsx  latest-insiders-trading-Sale.xlsx
templates/: index.html  sensor.html
web/templates/: index.html
