[tool.poetry]
name = "repl-nix-python-cinco"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_python_cinco"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
openpyxl = "^3.1.3"
requests = "^2.32.3"
schedule = "^1.2.2"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
